Changed data retrieval to se foreground service. Still WIP

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <service
             android:name=".PowerReadingService"
             android:exported="true" />
+        <activity android:name=".DataCycleActivity" />
     </application>
 
 </manifest>
