--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         </activity>
         <service
             android:name=".PowerReadingService"
-            android:exported="true" />
+            android:exported="true"
+            android:permission="TODO" />
         <activity android:name=".DataCycleActivity" />
     </application>
 
