Fixed bug where it would redo ip scan after a successful scan

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
             </intent-filter>
         </activity>
 
-
+        <activity android:name=".DataCycleActivity"> </activity>
         <service
             android:name=".PowerReadingService"
             android:enabled="true"
