--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.5.2"
+converterScalars = "2.9.0"
 gson = "2.10.1"
 kmqtt = "0.1.0"
 kmqttBrokerJvm = "0.4.8"
@@ -18,14 +19,16 @@ composeBom = "2024.06.00"
 okhttp = "4.9.3"
 media3Common = "1.4.0"
 okhttpVersion = "4.9.3"
+retrofit = "2.9.0"
 roomRuntime = "2.6.1"
-workRuntimeKtx = "2.9.0"
+workRuntimeKtx = "2.9.1"
 appcompat = "1.7.0"
 uiDesktop = "1.6.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
+converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "converterScalars" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
@@ -54,6 +57,7 @@ androidx-media3-common = { group = "androidx.media3", name = "media3-common", ve
 okhttp-v493 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttpVersion" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-ui-desktop = { group = "androidx.compose.ui", name = "ui-desktop", version.ref = "uiDesktop" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
